--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- added title to tab -->
-    <title>Social Media and Web Optimization</title> 
+    <title>Marketing and Web optimization</title>
 </head>
 
 <body>
+    <!-- changed div to nav-header -->
     <section class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1> 
+        <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
                 <li>
@@ -26,66 +26,68 @@
         </nav>
     </section>
     <!-- added alt text for background image -->
-    <section class="background" role="img" aria-label="Coworkers working together in a meeting"> </section>
-    
-    <section class="service-options">
-        <!-- added id for search engine optimization link-->
-        <main id="search-engine-optimization" class="search-engine-optimization">
-                    <!-- added accessibility/ alt text for image -->
-            <img src="./assets/images/search-engine-optimization.jpg" alt=" image of work desk that includes laptop coffee note book and pens"class="float-left" />
-            <h2>Search Engine Optimization</h2>
+    <section class="background" role="img" aria-label="Coworkers working together in a meeting"></section>
+<!-- changed div elements to semantic elements to correspond with each section on site -->
+<!-- added alt text for all images in section "Services" -->
+    <main class="Services">
+        <article id="search-engine-optimization" class="search-engine-optimization article">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="image of work desk that includes laptop coffee notebook and pens" class="float-left PIC" />
+            <h2>Search Engine Optimization</h2> 
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </main>
-                <!-- added accessibility/ alt text for image -->
-        <main id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt=" image of laptop screen representing a chart for growing reputation" class="float-right" />
+        </article>
+
+        <!-- alt text added -->
+        <article id="online-reputation-management"  class="online-reputation-management article">
+            <img src="./assets/images/online-reputation-management.jpg" alt="image of laptop screen representing a chart for growing reputation" class="float-right PIC" /> 
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </main>
-        <!-- added accessibility/ alt text for image -->
-        <main id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="image of people working at a desk for social media marketing" class="float-left" />
+        </article>
+        <!-- added alt text  -->
+        <article id="social-media-marketing"  class="social-media-marketing article">
+            <img src="./assets/images/social-media-marketing.jpg" alt=" image of people working at a desk for social media marketing"class="float-left PIC" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </main>
-    </section>
+        </article>
+    </main>
 
-    <section class="benefits">
-        <aside class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+    <!-- added alt text for symbols in aside tag -->
+    <aside class="benefits">
+        <section class="benefit-lead benefit">
+            <h3>Lead Generation </h3> 
+            <img src="./assets/images/lead-generation.png" alt="funnel that leads to more money" class="IMAGE"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </aside>
-        <aside class="benefit-brand">
+        </section>
+        <!-- added alt text -->
+        <section class="benefit-brand benefit">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="lightbulb" class="IMAGE"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </aside>
-        <aside class="benefit-cost">
+        </section>
+        <!-- added alt text -->
+        <section class="benefit-cost benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="money" class="IMAGE"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </aside>
-    </section>
-
-    <section class="footer"> 
+        </section>
+    </aside>
+    <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
-            &copy; 2023 Horiseon Social Solution Services, Inc.
+            &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </section>
+    </footer>
 </body>
 
 </html>
